# FAISS-RAG

./: README.md  main.py  pseudo_code.txt  pyproject.toml  requirements.txt
faiss/: index.faiss  index.pkl
