[project]
name = "faiss-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "dotenv>=0.9.9",
    "faiss-cpu>=1.14.3",
    "langchain>=1.3.14",
    "langchain-classic>=1.0.8",
    "langchain-community>=0.4.2",
    "langchain-core>=1.5.0",
    "langchain-google-genai>=4.3.1",
    "langchain-openai>=1.4.0",
    "langchain-text-splitters>=1.1.2",
    "langsmith>=0.10.10",
    "pypdf>=6.14.2",
    "streamlit>=1.60.0",
    "tavily>=1.1.0",
    "typing>=3.10.0.0",
]
